workloads/routing/auth/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-vs
  namespace: auth
spec:
  hosts:
  - api.growbin.app
  gateways:
  - istio-system/eco2-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/auth
    route:
    - destination:
        host: auth-api.auth.svc.cluster.local
        port:
          number: 8000
